# n_body

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  build_wasm.sh  config.toml  index.html
client/: Cargo.toml  build.rs
client/src/: lib.rs  renderer.rs
client/src/shaders/: fragment.glsl  vertex.glsl
docs/: overview.md  plan.md  rust-n-body-simulation.txt  status.md
docs/wiki/: Architecture.md  Client-Components.md  Communication-Protocol.md  Configuration.md  Development-Guide.md  Home.md  README.md  Server-Components.md  Shared-Library.md
scripts/: build-all.sh  build.sh  clean.sh  debug.sh  dev.sh  serve.sh
server/: Cargo.toml  index.html
server/src/: config.rs  main.rs  physics.rs  simulation.rs  watchdog.rs  websocket.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: galaxy.rs  lib.rs  particle.rs  physics.rs  renderer.rs
src/shaders/: vertex.glsl
www/: index.html  pkg
